Frontend/src/index.css
:root {
  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #1c1c25;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
html, body{
  height: 100%;
  width: 100%;
}

#root{
  height: 100%;
  width: 100%;
}

.chatGPT-app {
  max-width: 1200px;
  padding: 20px 20px;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  height: 100%;
  width: 100%;
}

.chatGPT-app .chat-heading{
  font-size: 30px;
  text-align: center;
  margin-top: 10px;
  font-weight: bold;
}

.chatGPT-app .chat-heading > span{
  color: #5468ef;
}



footer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 14px 10px;
  padding-right: 5px;
  gap: 10px;
  width: 100%;
  height: 50px;
  background: #2b2b36;
  border-radius: 10000px;
}
.composebar {
  padding: 0 10px;
  font-weight: 400;
  font-size: 16px;
  line-height: 30px;
  color: #ffffff;
  outline: 0;
  border: 0;
  max-width: calc(100% - 120px);
  min-width: calc(100% - 120px);
  background-color: transparent;
}
.send-button {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 15px 25px;
  height: 40px;
  background: linear-gradient(269deg, #2541fc 1.77%, #5466f2 99.15%);
  border-radius: 47px;
  cursor: pointer;
}
.send-button img {
  width: 20px;
  margin-right: -5px;
}
.chat-container {
  flex: 1;
  height: calc(100% - 120px);
  padding: 10px 0;
}
.layout {
  width: 100%;
  height: 100%;
  overflow: auto;
  display: flex;
  flex-direction: column;
  gap: 30px;
  scrollbar-width: none;
}
.chat-bubble {
  display: flex;
  gap: 15px;
  word-break: normal;
}
.chat-bubble .avatar {
  width: 44px;
  height: 44px;
  border-radius: 50%;
  background: #d9d9d9;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
}
.chat-bubble.bot .avatar {
  background: linear-gradient(269deg, #2541fc 1.77%, #5466f2 99.15%);
}
.chat-bubble .avatar img {
  width: 22px;
}
.post {
  padding: 10px 20px;
  width: fit-content;
  max-width: 100%;
  min-height: 40px;
  background: #2b2b36;
  border-radius: 22px;
  white-space: pre-wrap;
}
.chat-bubble.bot .post {
  background: #21212c;
}
.loader {
  padding: 0 20px;
  width: fit-content;
  max-width: 100%;
  min-height: 40px;
  background: #2b2b36;
  border-radius: 22px;
  display: flex;
  align-items: center;
}

@media (max-width: 450px){
  /* .chat-container {
    height: calc(100vh - 230px);
    padding: 10px 0;
  } */
}

